--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <td>Tidak ada anggota.</td>
         </tr>
     </table>
-   
+    <a href="http://1708107010021.html"></a>
+    <a href ="http://1708107010035.html"></a>
 
 </body>
 
