--- a/1708107010021.html
+++ b/1708107010021.html
@@ -1,2 +1,16 @@
-Nama : Maulana Ihsan Ahamd
-NIM  : 1708107010021
+</html>
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title></title>
+</head>
+
+<body>
+    <h1>Nama : Maulana Ihsan Ahmad</h1>
+    <h2>NIM : 1708107010021</h2>
+
+</body>
+
+</html>
