--- a/maulana.html
+++ b/maulana.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    
+    <title>Maulana</title>
+
 </head>
+
 <body>
     <h1>Maulana Ihsan</h1>
     <h1>1708107010021</h1>
 </body>
+
 </html>
